[FIX] account: upload button contrast
=== ISSUE ===

With Milk, our primary buttons received a fresh lifting in term
of design,with different designs according the state the button is in.

Before that, our buttons were green with a white text on it,
and the behavior was identical on `hover`. This allowed us to force
a `color: white` when it was needed, since the background always matched
WCAG contrast standards.

Since the 16.3, these buttons are on a dark background,
and that background becomes light when in `active` state. That means we
cannot use white on these buttons.

=== AFTER ===

We set the color of the link inside the button to `inherit` in order to
fix the active state behaviour.

Note that this should be improved when reworking the widget since having
a link inside a button is not really expected. Instead we should use a
link that allows different actions.

task-3354844
part of task-3326263

--- a/addons/account/static/src/components/bills_upload/bills_upload.scss
+++ b/addons/account/static/src/components/bills_upload/bills_upload.scss
@@ -21,7 +21,7 @@
 .o_widget_account_file_uploader {
   .btn-primary.oe_kanban_action_button {
     a {
-      color: $white;
+      color: inherit;
     }
   }
 }
